[WIP] Webpack tratando do JS.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,6 +29,7 @@ section.mainContent {
   &.projeto-mundo-da-luna {
     @import 'base/base';
     @import 'pages/header';
+    @import 'pages/banner';
   }
 }
 
