--- a/src/sass/vendors.scss
+++ b/src/sass/vendors.scss
@@ -2,5 +2,6 @@ $font-path: '~font-awesome/fonts';
 
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Slabo+27px');
+@import '~owl.carousel/dist/assets/owl.carousel.css';
 
 /* end vendors */
